--- a/css/style.css
+++ b/css/style.css
@@ -12,44 +12,67 @@ body {
   flex-direction: column;
   align-items: center;
   margin: 0;
-  padding:3%;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  padding: 3%;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  font-size: 16px;
 }
 
-h1, p{
-    color: rgba(247, 148, 36);
-    padding: 1%;
+h1,
+p {
+  color: rgba(247, 148, 36);
+  padding: 1%;
 }
 
 .currency-one,
-.currency-two{
-    padding: 2% 0;
-    font-size: 16px;
-    text-align: center;
-    width: 100%;
-}
-select{
-    font-size: 16px;
-    color: rgba(247, 148, 36);
-    border: 1px solid rgba(247, 148, 36);;
-}
+.currency-two {
+  padding: 2% 0;
 
-.currency-rate{
-    padding: 2% 0;
-    text-align: center;
-    color: rgba(247, 148, 36);
-    font-size: 16px;
-
+  text-align: center;
+  width: 100%;
 }
-input{
-    border: 0;
-    text-align: right;
-    font-size: 32px;
-    color: rgba(247, 148, 36);
-    
+select {
+  font-size: 16px;
+  color: rgba(247, 148, 36);
+  border: 0;
 }
 
+.currency-rate {
+  padding: 2% 0;
+  text-align: center;
+  color: rgba(247, 148, 36);
+  font-size: 16px;
+}
+input {
+  border: 0;
+  text-align: right;
+  font-size: 32px;
+  color: rgba(247, 148, 36);
+}
+input:focus,
+select:focus {
+  outline: 0;
+}
+select:focus-visible,
+select:focus-within {
+  outline: 0;
+}
 
+@media (max-width: 560px) {
+  h1 {
+    font-size: 120%;
+  }
+  p {
+    font-size: 85%;
+  }
+  img {
+    width: 35%;
+  }
 
-
-
+  select,
+  .currency-rate {
+    font-size: 85%;
+  }
+  input {
+    font-size: 122%;
+  }
+}
