--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 * {
   padding: 0;
   margin: 0;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
@@ -8,8 +9,15 @@ body {
   background-color: aliceblue;
   max-width: 1440px;
   height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   margin: 0;
   padding: 3%;
@@ -50,10 +58,6 @@ input {
 }
 input:focus,
 select:focus {
-  outline: 0;
-}
-select:focus-visible,
-select:focus-within {
   outline: 0;
 }
 
