--- a/css/style.css
+++ b/css/style.css
@@ -57,8 +57,32 @@ input {
   color: rgba(247, 148, 36);
 }
 input:focus,
-select:focus {
+select:focus,
+#swap-btn:focus {
   outline: 0;
+}
+
+#swap-btn{
+    
+    margin-left: 42%;
+    padding: 2% 7%;
+    border-radius: 10px;
+    border: 0;
+    background-color: rgba(247, 148, 36);
+    color: white;
+    cursor: pointer;
+}
+#swap-btn:hover {
+    -webkit-transform: translateY(-4px) translateX(-4px);
+    transform: translateY(-4px) translateX(-4px);
+    -webkit-transition: all .5s;
+    transition: all .5s;
+    -webkit-box-shadow: 2px 2px rgba(124, 123, 123, 0.89);
+    box-shadow: 2px 2px rgba(124, 123, 123, 0.89);
+}
+
+.convator{
+    padding: 4%;
 }
 
 @media (max-width: 560px) {
